mcp-server/k8s/01_namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: nmecar-mcp
  finalizers:
  labels:
    name: nmecar-mcp
    kubernetes.io/metadata.name: nmecar-mcp
---
