mcp-server/k8s/04_services.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: nmecar-mcp-service
  namespace: nmecar-mcp
spec:
  ports:
    - name: web8765
      port: 8765
      protocol: TCP
      targetPort: 8765
  selector:
    app: nmecar-mcp
  type: ClusterIP

---
