mcp-server/k8s/05_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nmecar-mcp-ingress
  namespace: nmecar-mcp
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '120'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '120'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '120'
spec:
  ingressClassName: nginx
  rules:
    - host: nmecar-mcp.nmlabs.gr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nmecar-mcp-service
                port:
                  name: web8765
